--- a/ASPNETCoreSamen/appsettings.json
+++ b/ASPNETCoreSamen/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ASPNETSamenCRUD;Trusted_Connection=True;"
+  }
 }
